overflow fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,7 @@
 body{
   font-family: Montserrat;
   color: white;
-  overflow-x: hidden;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 
